loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:5: error: not found: value True
    if (isOverBaggle()==True){
                        ^