loopdowhile.Poucet1.scala.code
var Cookies: Int = 0
while(exitReached()==false){
  for ( steppes <- 0 to 4){
    forward()
    if (isOverBaggle()==True){
      Cookies = Cookies + 1
    }
  }
  if (Cookies <= 2) {
    right()
  } 
   else {
     left()
   }  
   Cookies = 0 ;  
   
}
forward()